// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ContentAnalysis component with disabled buttons matches the snapshot 1`] = `
.c23 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c23:hover {
  border-color: #fff;
}

.c23:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c15 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c16 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c18 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c10 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c9 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8::-moz-focus-inner {
  border-width: 0;
}

.c8:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c7:hover {
  color: #000;
}

.c6:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c5 {
  font-size: 0.8rem;
}

.c2 {
  background-color: #fff;
}

.c4 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c4:hover {
  border-color: transparent;
  color: #0066cd;
}

.c4:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c4 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c13 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c14 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c1 {
  min-height: 24px;
  margin-bottom: 8px;
  margin-left: 24px;
}

.c3 {
  margin: 0;
  font-weight: normal;
}

.c11 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c17 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c19 {
  margin: 0;
  font-weight: normal;
}

.c20 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c21 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c22 {
  width: 13px;
  height: 13px;
  fill: #dc3232;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c24 {
  width: 18px;
  height: 18px;
  fill: #ddd;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c25 {
  margin: 0;
  font-weight: normal;
}

.c26 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c27 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c28 {
  margin: 0;
  font-weight: normal;
}

.c29 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c30 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c31 {
  margin: 0;
  font-weight: normal;
}

.c32 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c33 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c9::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      . If this is not correct, contact your site administrator.
    </span>
  </p>
  <div
    className="c2"
  >
    <h4
      className="c3"
    >
      <button
        aria-expanded={true}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c11 c12"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c14"
      role="list"
    >
      <li
        className="c15"
      >
        <svg
          aria-hidden="true"
          className="c16 c17"
          focusable="false"
          role="img"
        />
        <p
          className="c18"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c19"
    >
      <button
        aria-expanded={true}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c20 c21"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="c14"
      role="list"
    >
      <li
        className="c15"
      >
        <svg
          aria-hidden="true"
          className="c16 c22"
          focusable="false"
          role="img"
        />
        <p
          className="c18"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Marks are disabled in current view"
          aria-pressed={false}
          className="c23"
          disabled={true}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c24"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c25"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c26 c27"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c28"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c29 c30"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c31"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c32 c33"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component with hidden buttons matches the snapshot 1`] = `
.c15 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c16 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c18 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c10 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c9 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8::-moz-focus-inner {
  border-width: 0;
}

.c8:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c7:hover {
  color: #000;
}

.c6:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c5 {
  font-size: 0.8rem;
}

.c2 {
  background-color: #fff;
}

.c4 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c4:hover {
  border-color: transparent;
  color: #0066cd;
}

.c4:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c4 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c13 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c14 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c1 {
  min-height: 24px;
  margin-bottom: 8px;
  margin-left: 24px;
}

.c3 {
  margin: 0;
  font-weight: normal;
}

.c11 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c17 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c19 {
  margin: 0;
  font-weight: normal;
}

.c20 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c21 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c22 {
  width: 13px;
  height: 13px;
  fill: #dc3232;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c23 {
  margin: 0;
  font-weight: normal;
}

.c24 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c25 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c26 {
  margin: 0;
  font-weight: normal;
}

.c27 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c28 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c29 {
  margin: 0;
  font-weight: normal;
}

.c30 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c31 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c9::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      . If this is not correct, contact your site administrator.
    </span>
  </p>
  <div
    className="c2"
  >
    <h4
      className="c3"
    >
      <button
        aria-expanded={true}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c11 c12"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c14"
      role="list"
    >
      <li
        className="c15"
      >
        <svg
          aria-hidden="true"
          className="c16 c17"
          focusable="false"
          role="img"
        />
        <p
          className="c18"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c19"
    >
      <button
        aria-expanded={true}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c20 c21"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="c14"
      role="list"
    >
      <li
        className="c15"
      >
        <svg
          aria-hidden="true"
          className="c16 c22"
          focusable="false"
          role="img"
        />
        <p
          className="c18"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c23"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c24 c25"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c26"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c27 c28"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c29"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c30 c31"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component with language notice for someone who can change the language matches the snapshot 1`] = `
.c3 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c25 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c25:hover {
  border-color: #fff;
}

.c25:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c17 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c18 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c20 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c12 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c11 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10::-moz-focus-inner {
  border-width: 0;
}

.c10:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c9:hover {
  color: #000;
}

.c8:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c7 {
  font-size: 0.8rem;
}

.c4 {
  background-color: #fff;
}

.c6 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c6:hover {
  border-color: transparent;
  color: #0066cd;
}

.c6:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c6 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c15 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c16 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c1 {
  min-height: 24px;
  margin-bottom: 8px;
  margin-left: 24px;
}

.c2 {
  color: #0066cd;
  margin-left: 4px;
}

.c5 {
  margin: 0;
  font-weight: normal;
}

.c13 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c14 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c19 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c21 {
  margin: 0;
  font-weight: normal;
}

.c22 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c23 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c24 {
  width: 13px;
  height: 13px;
  fill: #dc3232;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c26 {
  width: 18px;
  height: 18px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c27 {
  margin: 0;
  font-weight: normal;
}

.c28 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c29 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c30 {
  margin: 0;
  font-weight: normal;
}

.c31 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c32 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c33 {
  margin: 0;
  font-weight: normal;
}

.c34 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c35 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c11::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      .
    </span>
    <a
      className="c2"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      Change language
      <span
        className="c3"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
  <div
    className="c4"
  >
    <h4
      className="c5"
    >
      <button
        aria-expanded={true}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c13 c14"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c16"
      role="list"
    >
      <li
        className="c17"
      >
        <svg
          aria-hidden="true"
          className="c18 c19"
          focusable="false"
          role="img"
        />
        <p
          className="c20"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c4"
  >
    <h4
      className="c21"
    >
      <button
        aria-expanded={true}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c22 c23"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="c16"
      role="list"
    >
      <li
        className="c17"
      >
        <svg
          aria-hidden="true"
          className="c18 c24"
          focusable="false"
          role="img"
        />
        <p
          className="c20"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="c25"
          disabled={false}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c26"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c4"
  >
    <h4
      className="c27"
    >
      <button
        aria-expanded={false}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c28 c29"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c4"
  >
    <h4
      className="c30"
    >
      <button
        aria-expanded={false}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c31 c32"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c4"
  >
    <h4
      className="c33"
    >
      <button
        aria-expanded={false}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c34 c35"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component with language notice for someone who cannot change the language matches the snapshot 1`] = `
.c3 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c25 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c25:hover {
  border-color: #fff;
}

.c25:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c17 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c18 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c20 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c12 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c11 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10::-moz-focus-inner {
  border-width: 0;
}

.c10:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c9:hover {
  color: #000;
}

.c8:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c7 {
  font-size: 0.8rem;
}

.c4 {
  background-color: #fff;
}

.c6 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c6:hover {
  border-color: transparent;
  color: #0066cd;
}

.c6:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c6 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c15 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c16 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c1 {
  min-height: 24px;
  margin-bottom: 8px;
  margin-left: 24px;
}

.c2 {
  color: #0066cd;
  margin-left: 4px;
}

.c5 {
  margin: 0;
  font-weight: normal;
}

.c13 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c14 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c19 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c21 {
  margin: 0;
  font-weight: normal;
}

.c22 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c23 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c24 {
  width: 13px;
  height: 13px;
  fill: #dc3232;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c26 {
  width: 18px;
  height: 18px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c27 {
  margin: 0;
  font-weight: normal;
}

.c28 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c29 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c30 {
  margin: 0;
  font-weight: normal;
}

.c31 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c32 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c33 {
  margin: 0;
  font-weight: normal;
}

.c34 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c35 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c11::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      .
    </span>
    <a
      className="c2"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      Change language
      <span
        className="c3"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
  <div
    className="c4"
  >
    <h4
      className="c5"
    >
      <button
        aria-expanded={true}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c13 c14"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c16"
      role="list"
    >
      <li
        className="c17"
      >
        <svg
          aria-hidden="true"
          className="c18 c19"
          focusable="false"
          role="img"
        />
        <p
          className="c20"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c4"
  >
    <h4
      className="c21"
    >
      <button
        aria-expanded={true}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c22 c23"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="c16"
      role="list"
    >
      <li
        className="c17"
      >
        <svg
          aria-hidden="true"
          className="c18 c24"
          focusable="false"
          role="img"
        />
        <p
          className="c20"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="c25"
          disabled={false}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c26"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c4"
  >
    <h4
      className="c27"
    >
      <button
        aria-expanded={false}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c28 c29"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c4"
  >
    <h4
      className="c30"
    >
      <button
        aria-expanded={false}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c31 c32"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c4"
  >
    <h4
      className="c33"
    >
      <button
        aria-expanded={false}
        className="c6 c7 c8 c9 c10 c11 c12"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c34 c35"
          focusable="false"
          role="img"
        />
        <span
          className="c15"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component with language notice matches the snapshot 1`] = `
.c23 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c23:hover {
  border-color: #fff;
}

.c23:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c15 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c16 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c18 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c10 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c9 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8::-moz-focus-inner {
  border-width: 0;
}

.c8:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c7:hover {
  color: #000;
}

.c6:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c5 {
  font-size: 0.8rem;
}

.c2 {
  background-color: #fff;
}

.c4 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c4:hover {
  border-color: transparent;
  color: #0066cd;
}

.c4:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c4 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c13 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c14 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c1 {
  min-height: 24px;
  margin-bottom: 8px;
  margin-left: 24px;
}

.c3 {
  margin: 0;
  font-weight: normal;
}

.c11 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c17 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c19 {
  margin: 0;
  font-weight: normal;
}

.c20 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c21 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c22 {
  width: 13px;
  height: 13px;
  fill: #dc3232;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c24 {
  width: 18px;
  height: 18px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c25 {
  margin: 0;
  font-weight: normal;
}

.c26 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c27 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c28 {
  margin: 0;
  font-weight: normal;
}

.c29 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c30 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c31 {
  margin: 0;
  font-weight: normal;
}

.c32 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c33 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c9::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      . If this is not correct, contact your site administrator.
    </span>
  </p>
  <div
    className="c2"
  >
    <h4
      className="c3"
    >
      <button
        aria-expanded={true}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c11 c12"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c14"
      role="list"
    >
      <li
        className="c15"
      >
        <svg
          aria-hidden="true"
          className="c16 c17"
          focusable="false"
          role="img"
        />
        <p
          className="c18"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c19"
    >
      <button
        aria-expanded={true}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c20 c21"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="c14"
      role="list"
    >
      <li
        className="c15"
      >
        <svg
          aria-hidden="true"
          className="c16 c22"
          focusable="false"
          role="img"
        />
        <p
          className="c18"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="c23"
          disabled={false}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c24"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c25"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c26 c27"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c28"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c29 c30"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c2"
  >
    <h4
      className="c31"
    >
      <button
        aria-expanded={false}
        className="c4 c5 c6 c7 c8 c9 c10"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c32 c33"
          focusable="false"
          role="img"
        />
        <span
          className="c13"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component with specified header level matches the snapshot 1`] = `
.c22 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c22:hover {
  border-color: #fff;
}

.c22:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c14 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c17 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c8 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7::-moz-focus-inner {
  border-width: 0;
}

.c7:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c6:hover {
  color: #000;
}

.c5:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4 {
  font-size: 0.8rem;
}

.c1 {
  background-color: #fff;
}

.c3 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c3:hover {
  border-color: transparent;
  color: #0066cd;
}

.c3:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c3 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c12 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c13 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c2 {
  margin: 0;
  font-weight: normal;
}

.c10 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c16 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c18 {
  margin: 0;
  font-weight: normal;
}

.c19 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c20 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c21 {
  width: 13px;
  height: 13px;
  fill: #dc3232;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c23 {
  width: 18px;
  height: 18px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c24 {
  margin: 0;
  font-weight: normal;
}

.c25 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c26 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c27 {
  margin: 0;
  font-weight: normal;
}

.c28 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c29 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c30 {
  margin: 0;
  font-weight: normal;
}

.c31 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c32 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c8::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c10 c11"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Errors (1)
        </span>
      </button>
    </h3>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c16"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h3
      className="c18"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c19 c20"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Problems (1)
        </span>
      </button>
    </h3>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c21"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="c22"
          disabled={false}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c23"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h3
      className="c24"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c25 c26"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Improvements (1)
        </span>
      </button>
    </h3>
  </div>
  <div
    className="c1"
  >
    <h3
      className="c27"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c28 c29"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Considerations (1)
        </span>
      </button>
    </h3>
  </div>
  <div
    className="c1"
  >
    <h3
      className="c30"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c31 c32"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Good results (2)
        </span>
      </button>
    </h3>
  </div>
</div>
`;

exports[`the ContentAnalysis component without language notice matches the snapshot 1`] = `
.c22 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c22:hover {
  border-color: #fff;
}

.c22:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c14 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c17 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c8 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7::-moz-focus-inner {
  border-width: 0;
}

.c7:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c6:hover {
  color: #000;
}

.c5:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4 {
  font-size: 0.8rem;
}

.c1 {
  background-color: #fff;
}

.c3 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c3:hover {
  border-color: transparent;
  color: #0066cd;
}

.c3:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c3 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c12 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c13 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c2 {
  margin: 0;
  font-weight: normal;
}

.c10 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c16 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c18 {
  margin: 0;
  font-weight: normal;
}

.c19 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c20 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c21 {
  width: 13px;
  height: 13px;
  fill: #dc3232;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c23 {
  width: 18px;
  height: 18px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c24 {
  margin: 0;
  font-weight: normal;
}

.c25 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c26 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c27 {
  margin: 0;
  font-weight: normal;
}

.c28 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c29 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c30 {
  margin: 0;
  font-weight: normal;
}

.c31 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c32 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c8::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c10 c11"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c16"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c18"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c19 c20"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c21"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="c22"
          disabled={false}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c23"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c24"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c25 c26"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c27"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c28 c29"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c30"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c31 c32"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component without problems and considerations, but with improvements and good matches the snapshot 1`] = `
.c14 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c17 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c8 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7::-moz-focus-inner {
  border-width: 0;
}

.c7:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c6:hover {
  color: #000;
}

.c5:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4 {
  font-size: 0.8rem;
}

.c1 {
  background-color: #fff;
}

.c3 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c3:hover {
  border-color: transparent;
  color: #0066cd;
}

.c3:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c3 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c12 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c13 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c2 {
  margin: 0;
  font-weight: normal;
}

.c10 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c16 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c18 {
  margin: 0;
  font-weight: normal;
}

.c19 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c20 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c21 {
  width: 13px;
  height: 13px;
  fill: #ee7c1b;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c22 {
  margin: 0;
  font-weight: normal;
}

.c23 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c24 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c8::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c10 c11"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c16"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c18"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c19 c20"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c21"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c22"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c23 c24"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component without problems and improvements matches the snapshot 1`] = `
.c14 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c17 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c8 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7::-moz-focus-inner {
  border-width: 0;
}

.c7:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c6:hover {
  color: #000;
}

.c5:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4 {
  font-size: 0.8rem;
}

.c1 {
  background-color: #fff;
}

.c3 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c3:hover {
  border-color: transparent;
  color: #0066cd;
}

.c3:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c3 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c12 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c13 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c2 {
  margin: 0;
  font-weight: normal;
}

.c10 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c16 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c18 {
  margin: 0;
  font-weight: normal;
}

.c19 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c20 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c21 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c22 {
  margin: 0;
  font-weight: normal;
}

.c23 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c24 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c8::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c10 c11"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c16"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c18"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c19 c20"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c21"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c22"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-W c23 c24"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component without problems matches the snapshot 1`] = `
.c14 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c17 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c8 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7::-moz-focus-inner {
  border-width: 0;
}

.c7:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c6:hover {
  color: #000;
}

.c5:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4 {
  font-size: 0.8rem;
}

.c1 {
  background-color: #fff;
}

.c3 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c3:hover {
  border-color: transparent;
  color: #0066cd;
}

.c3:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c3 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c12 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c13 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c2 {
  margin: 0;
  font-weight: normal;
}

.c10 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c16 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c18 {
  margin: 0;
  font-weight: normal;
}

.c19 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c20 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c21 {
  width: 13px;
  height: 13px;
  fill: #ee7c1b;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c22 {
  margin: 0;
  font-weight: normal;
}

.c23 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c24 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c25 {
  margin: 0;
  font-weight: normal;
}

.c26 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c27 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c8::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c10 c11"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c16"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c18"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c19 c20"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c21"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c22"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c23 c24"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c25"
    >
      <button
        aria-expanded={false}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c26 c27"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Good results (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component without problems, improvements and considerations matches the snapshot 1`] = `
.c23 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c23:hover {
  border-color: #fff;
}

.c23:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c14 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c17 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c8 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7::-moz-focus-inner {
  border-width: 0;
}

.c7:focus {
  outline: none;
  border-color: #0066cd;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c6:hover {
  color: #000;
}

.c5:active {
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4 {
  font-size: 0.8rem;
}

.c1 {
  background-color: #fff;
}

.c3 {
  width: 100%;
  background-color: #fff;
  padding: 0;
  border-color: transparent;
  border-radius: 0;
  outline: none;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-shadow: none;
  color: #0066cd;
}

.c3:hover {
  border-color: transparent;
  color: #0066cd;
}

.c3:active {
  box-shadow: none;
  background-color: #fff;
  color: #0066cd;
}

.c3 svg {
  margin: 0 8px 0 -5px;
  width: 20px;
  height: 20px;
}

.c12 {
  margin: 8px 0;
  word-wrap: break-word;
  font-size: 1.25em;
  line-height: 1.25;
}

.c13 {
  margin: 0;
  list-style: none;
  padding: 0 16px 0 0;
}

.c0 {
  width: 100%;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.c2 {
  margin: 0;
  font-weight: normal;
}

.c10 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c16 {
  width: 13px;
  height: 13px;
  fill: #888;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c18 {
  margin: 0;
  font-weight: normal;
}

.c19 {
  margin: 0 8px 0 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c20 {
  width: 16px;
  height: 16px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c21 {
  width: 13px;
  height: 13px;
  fill: #7ad03a;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c22 {
  width: 13px;
  height: 13px;
  fill: #7ad03a;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c24 {
  width: 18px;
  height: 18px;
  fill: #555;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media all and ( -ms-high-contrast:none ),( -ms-high-contrast:active ) {
  .c8::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c10 c11"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c16"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <h4
      className="c18"
    >
      <button
        aria-expanded={true}
        className="c3 c4 c5 c6 c7 c8 c9"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c19 c20"
          focusable="false"
          role="img"
        />
        <span
          className="c12"
        >
          Good results (2)
        </span>
      </button>
    </h4>
    <ul
      className="c13"
      role="list"
    >
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c21"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="c14"
      >
        <svg
          aria-hidden="true"
          className="c15 c22"
          focusable="false"
          role="img"
        />
        <p
          className="c17"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="c23"
          disabled={false}
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c24"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;
